auth with role in custom